# housing

./: .gitignore  ACS-CONCEPTS.md  ACS-EXPLORER.md  CLAUDE.md  ELASTICITY-R.md  ELASTICITY.md  FINER-GEOMETRIES.md  HOUSING-ISSUES.md  README.md  analysis.ipynb  analysis.py  analysis_nb.py  assemble_panel.py  browse_acs_catalog.py  collect_acs_catalog.py  collect_bls.py  collect_census_acs.py  collect_census_bps.py  collect_census_pep.py  collect_fhfa.py  collect_fred.py  collect_saipe.py  elasticity.html  elasticity.qmd  explore.py  pyproject.toml  tracts_co.R  tracts_co.html  tracts_co_viewer.R
__marimo__/session/: analysis.py.json  explore.py.json
layouts/: explore.grid.json
