[project]
name = "housing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair>=6.1.0",
    "duckdb>=1.5.3",
    "fredapi>=0.5.2",
    "jupyter>=1.1.1",
    "jupytext>=1.19.3",
    "marimo>=0.23.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "vega-datasets>=0.9.0",
    "xlrd>=2.0.2",
]
